# incident-investigator-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BUILD_STATE.md  CLAUDE.md  DEMO_STEP.MD  Dockerfile  Dockerfile.mcp-gitlab  Dockerfile.mcp-telemetry  INTRODUCTION.EN.MD  INTRODUCTION.MD  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/: launch.json
data/: catalog.json  init_db.py  migrate_day23.py  migrate_day25.py  migrate_day32.py  migrate_day51.py  migrate_day53.py  migrate_day54.py  migrate_eval_provider.py  migrate_fintech.py  migrate_phase14.py  migrate_projects.py  migrate_rbac.py  schema.sql  schema_postgres.sql  seed_demo.py  seed_demo2.py  seed_fintech1.py  seed_fintech2.py  seed_scenario1.py  seed_scenario2.py  seed_scenario3.py  seed_scenario4.py
demo/: setup_gitlab_repos.sh
deploy/: RUNBOOK_AGENTBASE.md
docs/: 01-roadmap.md  02-architecture.md  03-plan-5-ngay.md  04-hop-dong-tool-va-observation.md  05-engine.md  06-tool-layer.md  07-synthetic-data-va-kich-ban.md  08-vong-tu-chu-va-output.md  09-trace-va-storage.md  10-roadmap-20-ngay.md  11-roadmap-phase-5.md  12-roadmap-phase-6.md  13-roadmap-phase-8.md  14-roadmap-phase-9.md  15-roadmap-phase-10.md  16-roadmap-phase-11.md  17-roadmap-phase-12.md  18-roadmap-phase-13.md  19-roadmap-phase-14.md  20-roadmap-phase-15.md  DEMO.md  README.md  api.md
mcp_server/: server.py  server_gitlab_code.py  server_infra.py
scripts/: chat.py  eval_agent.py  eval_fintech.py  run_scenario.py  run_tool.py  setup_demo.py  start_gitlab_code_mcp.py  start_mcp_server.py  (+3 more)
(+146 files in other folders)
