[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent"
version = "0.1.0"
description = "Incident Investigation Agent — MVP"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.10.0",
    "aiosqlite>=0.20.0",
    "fastapi>=0.115.0",
    "starlette>=0.50.0",
    "uvicorn>=0.24.0",
    "langfuse>=2.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.27",
    "langgraph>=0.2.0",
    "itsdangerous>=2.0.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]
